Rename the package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mass-dependabot-merge",
+  "name": "mass-merge",
   "version": "1.0.0",
   "description": "A script for mass-approving and merging Dependabot pull requests",
   "main": "index.js",
