--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@octokit/core": "^3.4.0"
+  },
+  "devDependencies": {
+    "eslint-config-discourse": "^1.1.8"
   }
 }
