--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mass-merge": "mass-merge"
   },
   "dependencies": {
-    "@octokit/core": "^3.4.0"
+    "@octokit/core": "^3.4.0",
+    "prompt": "^1.1.0"
   },
   "devDependencies": {
     "eslint-config-discourse": "^1.1.8"
