--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mass-merge",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "A script for mass-approving and merging Dependabot pull requests",
   "main": "index.js",
   "author": "Jarek Radosz",
@@ -11,13 +11,13 @@
   },
   "scripts": {
     "lint": "yarn eslint . && yarn prettier --list-different .",
-    "mass-merge": "mass-merge"
+    "mass-merge": "node index.js"
   },
   "dependencies": {
-    "@octokit/core": "^4.1.0",
+    "@octokit/core": "^5.0.0",
     "prompt": "^1.3.0"
   },
   "devDependencies": {
-    "eslint-config-discourse": "^3.3.0"
+    "eslint-config-discourse": "^3.5.0"
   }
 }
