--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "mass-merge": "index.js"
   },
   "scripts": {
-    "lint": "yarn eslint . && yarn prettier --list-different .",
+    "lint": "pnpm eslint . && pnpm prettier --list-different .",
     "mass-merge": "node index.js"
   },
   "dependencies": {
-    "@octokit/core": "^5.0.0",
+    "@octokit/core": "^5.0.1",
     "prompt": "^1.3.0"
   },
   "devDependencies": {
-    "eslint-config-discourse": "^3.5.0"
+    "eslint": "^8.51.0",
+    "eslint-config-discourse": "^5.0.0",
+    "prettier": "^3.0.3"
   }
 }
