--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mass-merge",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "A script for mass-approving and merging Dependabot pull requests",
   "main": "index.js",
   "author": "Jarek Radosz",
@@ -18,8 +18,8 @@
     "prompt": "^1.3.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-discourse": "^5.1.0",
-    "prettier": "^3.4.2"
+    "@discourse/lint-configs": "2.2.3",
+    "eslint": "9.15.0",
+    "prettier": "2.8.8"
   }
 }
