--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mass-merge",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "A script for mass-approving and merging Dependabot pull requests",
   "main": "index.js",
   "author": "Jarek Radosz",
@@ -10,14 +10,16 @@
     "mass-merge": "index.js"
   },
   "scripts": {
-    "lint": "yarn eslint . && yarn prettier --list-different .",
+    "lint": "pnpm eslint . && pnpm prettier --list-different .",
     "mass-merge": "node index.js"
   },
   "dependencies": {
-    "@octokit/core": "^5.0.0",
+    "@octokit/core": "^5.2.0",
     "prompt": "^1.3.0"
   },
   "devDependencies": {
-    "eslint-config-discourse": "^3.5.0"
+    "@discourse/lint-configs": "2.2.3",
+    "eslint": "9.15.0",
+    "prettier": "2.8.8"
   }
 }
