--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "@discourse/lint-configs": "2.2.3",
     "eslint": "9.15.0",
     "prettier": "2.8.8"
-  }
+  },
+  "packageManager": "pnpm@9.15.5"
 }
